--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.0"
